--- a/app/ui/assets/scss/main.scss
+++ b/app/ui/assets/scss/main.scss
@@ -511,6 +511,7 @@ $main-view-search-bar-height : 40px;
 }
 
 .import-browser-menu-wrapper,
+.export-browser-menu-wrapper,
 .import-backup-menu-wrapper,
 .create-backup-menu-wrapper {
 	@extend ._overlay-menu-wrapper;
