--- a/app/ui/assets/scss/intro.scss
+++ b/app/ui/assets/scss/intro.scss
@@ -23,7 +23,7 @@
 }
 
 .update-icon {
-	background-color : transparentize(white, 0.75);
+	background-color : transparentize(black, .5);
 	opacity : 0;
 	position : absolute;
 	cursor : pointer;
