--- a/app/ui/assets/scss/tour.scss
+++ b/app/ui/assets/scss/tour.scss
@@ -162,34 +162,22 @@ $blue : #22A8E8;
 
 		display: inline-block;
 		padding: 5px 10px;
-		margin: 2px 5px;
+		margin: 4px 10px;
 		
+		cursor : pointer;
+
+		font: {
+			family: $montserrat;
+			size: 1em;
+		}
+
+		color: $black;	
 		background-color: #E9EAEF;
-		
 
-		p, 
-		img {
-			vertical-align: middle;
+		@include transition(opacity, .5s, ease);
 
-			display: inline-block;
-		}
-
-		p {
-			margin: 2px 5px;
-
-			font: {
-				family: $montserrat;
-				size: 1em;
-			}
-
-			color: $black;	
-			
-		}
-
-		img {
-			margin-left: 5px;
-
-			cursor: pointer;
+		&:hover {
+			opacity : 0.75;
 		}
 	}
 }
